productController and monitoringController